--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,5 +1,11 @@
 Sitemap Parser Change Log
 
-Current Development 0.4-SNAPSHOT
+v0.6
+- Updated Java to v8
+- Updated libraries to latest version
+- Added maven assembly plugin
+- Added Released Jar
+
+v0.4-SNAPSHOT
 - First version, working project
 - Currently only parsing online URLs
